--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
-html, body {
+html,
+body {
   height: 100%;
   width: 100%;
+  font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
 
 body {
   margin: 0;
+  background-color: whitesmoke;
+}
+
+p {
+  font-weight: 600;
+  font-size: 16px;
+  text-align: center;
 }
 
 .page-container {
@@ -15,15 +24,14 @@ body {
 
 .button {
   text-decoration: none;
-  font-size: large;
+  font-size: small;
   text-align: center;
   display: inline-block;
   position: relative;
   color: #000000;
   border: 1px solid black;
-  font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-  padding: 10px 20px;
-  margin: 10px;
+  padding: 5px 10px;
+  margin: 5px;
 }
 
 .flex {
@@ -50,15 +58,43 @@ footer {
   bottom: 0;
   width: 100%;
   justify-content: space-between;
+  font-weight: 100;
+  font-size: x-small;
 }
 
 footer a {
   text-decoration: none;
   color: #000000;
-  padding: 10px;
+  padding: 5px;
   align-self: flex-end;
 }
 
 footer div {
-  padding: 10px;
+  padding: 5px;
+}
+
+@media screen and (min-width: 700px) {
+  p {
+    font-size: 1.2em
+  }
+
+  footer {
+    font-size: large;
+  }
+
+  footer a {
+    padding: 10px;
+  }
+
+  footer div {
+    padding: 10px;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  .button {
+    font-size: large;
+    padding: 10px 20px;
+    margin: 10px;
+  }
 }
