--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 html,
 body {
   height: 100%;
-  width: 100%;
   font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
 
 body {
   margin: 0;
   background-color: whitesmoke;
+  justify-content: space-between;
 }
 
 p {
@@ -17,9 +17,9 @@ p {
 }
 
 .page-container {
-  position: relative;
-  min-height: 100vh;
+  margin: auto;
   width: inherit;
+  flex: 1 0 auto
 }
 
 .button {
@@ -54,12 +54,14 @@ p {
 }
 
 footer {
-  position: absolute;
+  position: sticky;
   bottom: 0;
+  left: 0;
   width: 100%;
   justify-content: space-between;
   font-weight: 100;
   font-size: x-small;
+  flex-shrink: 0;
 }
 
 footer a {
@@ -75,7 +77,7 @@ footer div {
 
 @media screen and (min-width: 700px) {
   p {
-    font-size: 1.2em
+    font-size: 1.2em;
   }
 
   footer {
